--- a/index.html
+++ b/index.html
@@ -17,5 +17,14 @@
             <li><a href="#" class="header__lang-link">En</a></li>
         </ul>
     </header>
+
+    <main class="content page__content">
+        <section class="lead">
+            <h1 class="lead__title">Путешествия по России</h1>
+            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+            <img src="images/main-photo-in-train.png" alt="Девушка спит в поезде" class="lead__image">
+            <p class="lead__caption">ваша полка — верхняя</p>
+        </section>
+    </main>
 </body>
 </html>
