add a photo-grid section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
                 <li class="intro__list-item">Аэропортов <span class="intro__list-item-number">241</span></li>
             </ul>
         </section>
+
+        <section class="photo-grid">
+            <img src="images/photo-grid-section/sea_with_trees.jpg" alt="Берёзы и море за окном поезда" class="photo-grid__item">
+            <img src="images/photo-grid-section/clouds-with-mountaines.jpg" alt="Заснеженные веришины гор в облаках" class="photo-grid__item">
+            <img src="images/photo-grid-section/dog.jpg" alt="Собака в поле" class="photo-grid__item">
+            <img src="images/photo-grid-section/christmas-trees.jpg" alt="Ёлки в тумане" class="photo-grid__item">
+            <img src="images/photo-grid-section/winter-lake.jpg" alt="Замёрзшее озеро" class="photo-grid__item">
+            <img src="images/photo-grid-section/coastline.jpg" alt="Береговая линия с горами на горизонте" class="photo-grid__item">
+            <img src="images/photo-grid-section/mountain-tops.jpg" alt="Вершины гор" class="photo-grid__item">
+            <img src="images/photo-grid-section/crosswalk.jpg" alt="Переход дороги" class="photo-grid__item">
+            <img src="images/photo-grid-section/mountains-spring.jpg" alt="Тающий снег в горах" class="photo-grid__item">
+            <img src="images/photo-grid-section/mountaine-evening.jpg" alt="Солнце освещает гору вечером" class="photo-grid__item">
+            <img src="images/photo-grid-section/coastline-winter.jpg" alt="Береговая линиия со снегом" class="photo-grid__item">
+            <img src="images/photo-grid-section/mountaine-top-in-clouds.jpg" alt="Вершина горы в облаках" class="photo-grid__item">
+        </section>
     </main>
 </body>
 </html>
