--- a/index.html
+++ b/index.html
@@ -123,11 +123,22 @@
         </section>
 
         <section class="cover">
-            <a href="#" target="_blank" class="cover__item">
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__item">
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
             </a>
         </section>
     </main>
+
+    <footer class="footer">
+        <ul class="footer__links">
+            <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+            <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+            <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+            <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+            <li><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+        </ul>
+        <p class="footer__copyright">© 2022. Раздорский Василий</p>
+    </footer>
 </body>
 </html>
