--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <img src="images/main-logo.svg" alt="Логотип - очертаниц границ России" class="header__logo">
         </a>       
         <ul class="header__links">
-            <li><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
-            <li><a href="#" class="header__lang-link">En</a></li>
+            <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+            <a href="#" class="header__lang-link">En</a>
         </ul>
     </header>
 
@@ -27,7 +27,7 @@
         </section>
 
         <section class="intro">
-            <h3 class="intro__title">Чего мы там не видели?</h3>
+            <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
                 <li class="intro__list-item">Часовых поясов <span class="intro__list-item-number">11</span></li>
@@ -131,13 +131,15 @@
     </main>
 
     <footer class="footer">
-        <ul class="footer__links">
-            <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-            <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
-            <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
-            <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-            <li><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
-        </ul>
+        <nav>
+            <ul class="footer__links">
+                <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+                <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+                <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+                <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+                <li><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+            </ul>
+        </nav>
         <p class="footer__copyright">© 2022. Раздорский Василий</p>
     </footer>
 </body>
