--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <a href="#">
             <img src="images/main-logo.svg" alt="Логотип - очертаниц границ России" class="header__logo">
         </a>       
-        <ul class="header__links">
+        <div class="header__links">
             <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
             <a href="#" class="header__lang-link">En</a>
-        </ul>
+        </div>
     </header>
 
     <main class="page__content">
